Point Light Shadow Mapping!
- Louron Core -

Implemented shadow mapping into Forward+ rendering pipeline. Currently can only support a limited number of shadow maps due to performance and memory concerns. Working on an algorithm locally to determine how to do something like cube map texture atlas for point lights, determining importance, how much res a point light cube map should get, etc.

Currently this works by creating an array of a fixed amount of cube maps. I will want to make this dynamic based on a global setting e.g., Shadow Quality, low, medium, high, etc. So maybe low settings only has 2 cube maps for point lights.

First I get the point lights which intersect with the frustum. Because I was already doing this for Forward+, this is free! I do alittle sorting to determine which light is the closest to the camera. Maybe I will have a cutoff worked into the global settings? Light position + radius distance to camera will be cutoff at a certain distance based on low medium or high settings?

Then I query the octree with the bounds of the point light to determine which meshes this point light intersects with. Note that a mesh outside the frustum could cast a shadow into the frustum, so the meshes need to be independent of the frustum, but dependent on being within the lights bounding sphere. Only meshes with the Cast Shadow option in their Mesh Renderer Component will be drawn in the shadow map.

Then the point light shadow FBO is bound and we loop through the shadow casting lights, calculate the projections of the 6 sides of a cube map, set the uniform values for the shader (courtesy to LearnOpenGL for this shader), then draw all sub_meshes that are in the lights shadow into the shadow cube map.

The pipeline also passes the cube map index to the shader in the UpdateSSBO stage of the pipeline so the shader knows which index in the cube map array to refer to.

Updated serialisation and deserialisation for mesh renderer components and point light components.

F

--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Louron Editor Dockspace Window]
 Pos=0,0
-Size=1600,900
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
@@ -14,8 +14,8 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=282,19
-Size=926,530
+Pos=197,19
+Size=1369,712
 Collapsed=0
 DockId=0x00000002,0
 
@@ -26,7 +26,7 @@ Size=1180,967
 Collapsed=0
 
 [Window][Asset Registry]
-ViewportPos=2496,177
+ViewportPos=1708,113
 ViewportId=0x54CB1100
 Size=548,850
 Collapsed=0
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=756,551
-Size=452,349
+Pos=980,733
+Size=586,276
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=280,530
+Size=195,712
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1210,19
-Size=390,881
+Pos=1568,19
+Size=352,990
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000009,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -109,8 +109,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,551
-Size=754,349
+Pos=0,733
+Size=978,276
 Collapsed=0
 DockId=0x00000007,1
 
@@ -131,15 +131,16 @@ Size=400,100
 Collapsed=0
 
 [Window][Project Properties]
-Pos=1285,383
-Size=436,293
+Pos=1626,824
+Size=294,185
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Scene Properties]
-Pos=1244,19
-Size=356,881
+Pos=1626,824
+Size=294,185
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x0000000A,1
 
 [Window][Create New Script]
 Pos=650,400
@@ -181,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,551
-Size=754,349
+Pos=0,733
+Size=978,276
 Collapsed=0
 DockId=0x00000007,0
 
@@ -342,15 +343,17 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xBCD3763F Window=0xF829B4E6 Pos=320,362 Size=1600,881 Split=X
-  DockNode        ID=0x00000005 Parent=0xBCD3763F SizeRef=1208,881 Split=Y
-    DockNode      ID=0x0000000D Parent=0x00000005 SizeRef=1920,530 Split=X
-      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=280,881 Selected=0x2E9237F7
-      DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=926,881 Split=Y
+DockSpace         ID=0xBCD3763F Window=0xF829B4E6 Pos=-1920,-113 Size=1920,990 Split=X
+  DockNode        ID=0x00000005 Parent=0xBCD3763F SizeRef=1246,881 Split=Y
+    DockNode      ID=0x0000000D Parent=0x00000005 SizeRef=1920,712 Split=X
+      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=195,881 Selected=0x2E9237F7
+      DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=1049,881 Split=Y
         DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
         DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=0,58 CentralNode=1 Selected=0xE192E354
-    DockNode      ID=0x0000000E Parent=0x00000005 SizeRef=1920,349 Split=X Selected=0xBF096F38
-      DockNode    ID=0x00000007 Parent=0x0000000E SizeRef=754,340 Selected=0x81AED595
-      DockNode    ID=0x00000008 Parent=0x0000000E SizeRef=452,340 Selected=0x1E6EB881
-  DockNode        ID=0x00000006 Parent=0xBCD3763F SizeRef=390,881 Selected=0xB5796446
+    DockNode      ID=0x0000000E Parent=0x00000005 SizeRef=1920,276 Split=X Selected=0xBF096F38
+      DockNode    ID=0x00000007 Parent=0x0000000E SizeRef=778,340 Selected=0xBF096F38
+      DockNode    ID=0x00000008 Parent=0x0000000E SizeRef=466,340 Selected=0x1E6EB881
+  DockNode        ID=0x00000006 Parent=0xBCD3763F SizeRef=352,881 Split=Y Selected=0xB5796446
+    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=421,714 Selected=0xB5796446
+    DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=421,165 Selected=0x2A660BC6
 
