Directional Light Cascaded Shadow Mapping
- Louron Core -

Implemented cascaded shadow mapping for directional light sources. This is set to a static 5 cascades per directional light casting shadows, and there is a max of 5 directional lights that can cast shadows.

Expanded on Directional Light Component to include serialisation of Shadow Type flag.

Implemented static helper functions to Frustum class to make cascade calculations easier.

- Louron Editor -

Moved Shaders from Project/Assets to Resources as the shaders will be static for any project that is used.

Fixed issue with Editor Camera not calculating view and proj matrices on start and waits till we hover mouse over scene viewport for it to update the camera for first time.

--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Louron Editor Dockspace Window]
 Pos=0,0
-Size=1920,1009
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,9 +15,9 @@ Collapsed=0
 
 [Window][Scene]
 Pos=197,19
-Size=1369,712
+Size=998,524
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000009,0
 
 [Window][Dear ImGui Demo]
 ViewportPos=449,65
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=980,733
-Size=586,276
+Pos=899,545
+Size=701,355
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=195,712
+Size=195,524
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1568,19
-Size=352,990
+Pos=1197,19
+Size=403,524
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000A,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -109,8 +109,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,733
-Size=978,276
+Pos=0,545
+Size=897,355
 Collapsed=0
 DockId=0x00000007,1
 
@@ -134,13 +134,13 @@ Collapsed=0
 Pos=1626,824
 Size=294,185
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000006,0
 
 [Window][Scene Properties]
 Pos=1626,824
 Size=294,185
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x00000006,1
 
 [Window][Create New Script]
 Pos=650,400
@@ -182,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,733
-Size=978,276
+Pos=0,545
+Size=897,355
 Collapsed=0
 DockId=0x00000007,0
 
@@ -195,6 +195,12 @@ Collapsed=0
 [Window][Delete?##ContentBrowserDeletePath]
 Pos=650,400
 Size=300,100
+Collapsed=0
+
+[Window][Shadow Depth Texture]
+ViewportPos=2231,106
+ViewportId=0xFAB62E20
+Size=1046,1063
 Collapsed=0
 
 [Table][0xAC9A836A,2]
@@ -343,17 +349,17 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xBCD3763F Window=0xF829B4E6 Pos=-1920,-113 Size=1920,990 Split=X
-  DockNode        ID=0x00000005 Parent=0xBCD3763F SizeRef=1246,881 Split=Y
-    DockNode      ID=0x0000000D Parent=0x00000005 SizeRef=1920,712 Split=X
-      DockNode    ID=0x00000003 Parent=0x0000000D SizeRef=195,881 Selected=0x2E9237F7
-      DockNode    ID=0x00000004 Parent=0x0000000D SizeRef=1049,881 Split=Y
-        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=0,58 CentralNode=1 Selected=0xE192E354
-    DockNode      ID=0x0000000E Parent=0x00000005 SizeRef=1920,276 Split=X Selected=0xBF096F38
-      DockNode    ID=0x00000007 Parent=0x0000000E SizeRef=778,340 Selected=0xBF096F38
-      DockNode    ID=0x00000008 Parent=0x0000000E SizeRef=466,340 Selected=0x1E6EB881
-  DockNode        ID=0x00000006 Parent=0xBCD3763F SizeRef=352,881 Split=Y Selected=0xB5796446
-    DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=421,714 Selected=0xB5796446
-    DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=421,165 Selected=0x2A660BC6
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=190,232 Size=1600,881 Split=X
+  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1195,881 Split=Y
+    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,524 Split=X
+      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=195,881 Selected=0x2E9237F7
+      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=998,881 Split=Y
+        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
+          DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=998,524 CentralNode=1 Selected=0xE192E354
+          DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=403,524 Selected=0xB5796446
+    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,355 Split=X Selected=0xBF096F38
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=670,340 Selected=0xBF096F38
+      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=523,340 Selected=0x1E6EB881
+  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=403,881 Selected=0xB5796446
 
