--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -26,7 +26,7 @@ Size=1180,967
 Collapsed=0
 
 [Window][Asset Registry]
-ViewportPos=1708,113
+ViewportPos=2052,171
 ViewportId=0x54CB1100
 Size=548,850
 Collapsed=0
@@ -349,7 +349,7 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=138,180 Size=1600,881 Split=X
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=41,89 Size=1600,881 Split=X
   DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1195,881 Split=Y
     DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,524 Split=X
       DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=195,881 Selected=0x2E9237F7
@@ -359,7 +359,7 @@ DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=138,180 Size=1600,881 Sp
           DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=998,524 CentralNode=1 Selected=0xE192E354
           DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=403,524 Selected=0xB5796446
     DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,355 Split=X Selected=0xBF096F38
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=670,340 Selected=0x81AED595
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=670,340 Selected=0xBF096F38
       DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=523,340 Selected=0x1E6EB881
   DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=403,881 Selected=0xB5796446
 
