Asset Manager Rewrite
- Louron Core -

Refactored and redesigned the Editor Asset Manager system. Previously there was the issue of managing handles based purely off their relative file path to the project asset directory, meaning that everytime you may have moved an asset in the assets directory, the handle would invalidate, and all sources in a scene that may have referred to that handle are now invalid. It would be hard to find all references of a UINT value and update it with the new handle...

SO I have opted to make it similar to Unity's workflow where every asset has a .meta file generated when first imported. This meta data file holds the static AssetHandle for that Asset once it has been imported. This means, we can move our assets around freely without worrying about invalidating handles that our scene reference, as handles will remain the same due to the .meta file that it alongside the asset, defining to us what the actual handle is, regardless of its new location in the assets directory.

Refactored Asset Importers to fit new system, most importantly, the Model Import.

Separated Asset Manager API into its own file.

Added SubmitToMainThread functionality to the engine. This is so we can submit functions to the main thread so that there aren't any issues with multithreading, data races, etc.

Implemented FocusOnEntity feature to EditorCamera class.

Implemented simple sphere VAO into Renderer for debug sphere rendering.

Fixed yet another issue with colliders, now it was their transformations in relation to their component properties such as box extents, center, and radius.

Updated TransformComponent::SetTransform functionality to decompose the local transform and set the internal properties to the passed transform.

Added functionality to Entity::AddComponent<BoxCollider> so that it sets the center and size of the collider as a close fit to the mesh filter attached to the entity.

Fixed Scene::DestroyEntity when trying to lock the mutex as a child whe

--- a/Louron Editor/Louron Editor.vcxproj
+++ b/Louron Editor/Louron Editor.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)\Louron Core\include\physx;$(ProjectDir)\include\imgui;$(ProjectDir)\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(SolutionDir)\Louron Core\libs\mono;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\Louron Core\libs\esfw;$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(SolutionDir)\Louron Core\libs\mono;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <OutDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\Intermediaries\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)\Louron Core\include\physx;$(ProjectDir)\include\imgui;$(ProjectDir)\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(SolutionDir)\Louron Core\libs\mono;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\Louron Core\libs\esfw;$(SolutionDir)\Louron Core\libs\assimp;$(SolutionDir)\Louron Core\libs\glad;$(SolutionDir)\Louron Core\libs\glfw;$(SolutionDir)\Louron Core\libs\physx;$(SolutionDir)\Louron Core\libs\spdlog;$(SolutionDir)\Louron Core\libs\yaml-cpp;$(SolutionDir)\Louron Core\libs\mono;$(ProjectDir)\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <OutDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)\bin\$(Configuration)\$(Platform)\Intermediaries\</IntDir>
   </PropertyGroup>
@@ -72,7 +72,7 @@
     <Link>
       <SubSystem>NotSet</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc143-mtd.lib;glfw3.lib;opengl32.lib;yaml-cppd.lib;spdlogd.lib;Debug\libmono-static-sgen.lib;debug\PhysX_static_64.lib;debug\PhysXCharacterKinematic_static_64.lib;debug\PhysXCommon_static_64.lib;debug\PhysXCooking_static_64.lib;debug\PhysXExtensions_static_64.lib;debug\PhysXFoundation_static_64.lib;debug\PhysXPvdSDK_static_64.lib;debug\PhysXVehicle_static_64.lib;debug\PhysXVehicle2_static_64.lib;Ws2_32.lib;Winmm.lib;Version.lib;Bcrypt.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>efsw-static-debug.lib;assimp-vc143-mtd.lib;glfw3.lib;opengl32.lib;yaml-cppd.lib;spdlogd.lib;Debug\libmono-static-sgen.lib;debug\PhysX_static_64.lib;debug\PhysXCharacterKinematic_static_64.lib;debug\PhysXCommon_static_64.lib;debug\PhysXCooking_static_64.lib;debug\PhysXExtensions_static_64.lib;debug\PhysXFoundation_static_64.lib;debug\PhysXPvdSDK_static_64.lib;debug\PhysXVehicle_static_64.lib;debug\PhysXVehicle2_static_64.lib;Ws2_32.lib;Winmm.lib;Version.lib;Bcrypt.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>
       </Profile>
       <IgnoreSpecificDefaultLibraries>MSVCRT</IgnoreSpecificDefaultLibraries>
@@ -98,7 +98,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc143-mt.lib;glfw3.lib;opengl32.lib;yaml-cpp.lib;spdlog.lib;Release\libmono-static-sgen.lib;release\PhysX_static_64.lib;release\PhysXCharacterKinematic_static_64.lib;release\PhysXCommon_static_64.lib;release\PhysXCooking_static_64.lib;release\PhysXExtensions_static_64.lib;release\PhysXFoundation_static_64.lib;release\PhysXPvdSDK_static_64.lib;release\PhysXVehicle_static_64.lib;release\PhysXVehicle2_static_64.lib;Ws2_32.lib;Winmm.lib;Version.lib;Bcrypt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>efsw-static-release.lib;assimp-vc143-mt.lib;glfw3.lib;opengl32.lib;yaml-cpp.lib;spdlog.lib;Release\libmono-static-sgen.lib;release\PhysX_static_64.lib;release\PhysXCharacterKinematic_static_64.lib;release\PhysXCommon_static_64.lib;release\PhysXCooking_static_64.lib;release\PhysXExtensions_static_64.lib;release\PhysXFoundation_static_64.lib;release\PhysXPvdSDK_static_64.lib;release\PhysXVehicle_static_64.lib;release\PhysXVehicle2_static_64.lib;Ws2_32.lib;Winmm.lib;Version.lib;Bcrypt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <Profile>
       </Profile>
       <AdditionalOptions>/ignore:4006,4099</AdditionalOptions>
