--- a/Louron Core/Louron Core.vcxproj.filters
+++ b/Louron Core/Louron Core.vcxproj.filters
@@ -1937,9 +1937,6 @@
     <ClInclude Include="src\Core\Platform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\filewatch\FileWatch.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\imguizmo\GraphEditor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -1959,6 +1956,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Renderer\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Asset\Asset Manager API.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
