--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -14,8 +14,8 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=197,19
-Size=998,524
+Pos=364,19
+Size=851,607
 Collapsed=0
 DockId=0x00000009,0
 
@@ -26,10 +26,10 @@ Size=1180,967
 Collapsed=0
 
 [Window][Asset Registry]
-ViewportPos=2052,171
-ViewportId=0x54CB1100
-Size=548,850
+Pos=1285,19
+Size=315,881
 Collapsed=0
+DockId=0x0000000C,0
 
 [Window][DockSpace Demo]
 Size=1600,900
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=899,545
-Size=701,355
+Pos=1111,628
+Size=489,272
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,13 +59,13 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=195,524
+Size=362,607
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1197,19
-Size=403,524
+Pos=1217,19
+Size=383,607
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -109,8 +109,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,545
-Size=897,355
+Pos=0,628
+Size=1109,272
 Collapsed=0
 DockId=0x00000007,1
 
@@ -131,8 +131,8 @@ Size=400,100
 Collapsed=0
 
 [Window][Project Properties]
-Pos=1626,824
-Size=294,185
+Pos=1197,19
+Size=403,881
 Collapsed=0
 DockId=0x00000006,0
 
@@ -182,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,545
-Size=897,355
+Pos=0,628
+Size=1109,272
 Collapsed=0
 DockId=0x00000007,0
 
@@ -349,17 +349,19 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=41,89 Size=1600,881 Split=X
-  DockNode          ID=0x00000005 Parent=0xBCD3763F SizeRef=1195,881 Split=Y
-    DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,524 Split=X
-      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=195,881 Selected=0x2E9237F7
-      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=998,881 Split=Y
-        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
-          DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=998,524 CentralNode=1 Selected=0xE192E354
-          DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=403,524 Selected=0xB5796446
-    DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,355 Split=X Selected=0xBF096F38
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=670,340 Selected=0xBF096F38
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=523,340 Selected=0x1E6EB881
-  DockNode          ID=0x00000006 Parent=0xBCD3763F SizeRef=403,881 Selected=0xB5796446
+DockSpace             ID=0xBCD3763F Window=0xF829B4E6 Pos=34,76 Size=1600,881 Split=X
+  DockNode            ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=X
+    DockNode          ID=0x00000005 Parent=0x0000000B SizeRef=1195,881 Split=Y
+      DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,607 Split=X
+        DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=362,881 Selected=0x2E9237F7
+        DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=1556,881 Split=Y
+          DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+          DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
+            DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=1171,524 CentralNode=1 Selected=0xE192E354
+            DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=383,524 Selected=0xB5796446
+      DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,272 Split=X Selected=0xBF096F38
+        DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1331,340 Selected=0xBF096F38
+        DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=587,340 Selected=0x1E6EB881
+    DockNode          ID=0x00000006 Parent=0x0000000B SizeRef=403,881 Selected=0x2A660BC6
+  DockNode            ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
 
