Scripting Compute Shaders
- Louron Core -

Implementation of utilising Compute Shaders through C# scripting.

You can now declare ComputeShader variables in C# scripts, assign an appropriate .compute asset from the asset directory, and dispatch compute shaders through C# scripts.

The main interface with compute shaders is to write and read data through the use of SSBOs. There is now a ComputeBuffer object which can be created in C# scripts that allows you to pass data to the GPU SSBO for access in the GPU.

This is similar to Unity's approach where you have a ComputeShader asset which you then assign appropriate buffers or uniforms to, dispatch the shader, then read back the data.

Reading back data will pause the main thread till glFinish has finished the Compute Shader execution, and it is safe to pass the data back from GPU->C++->C#.

Implemented functionality for import of Compute Shader assets through the asset manager.

Updated some of the old Shader class code.

Removed Debug Sphere VAO.

- Louron Editor -

Added Compute Shader to Script Component fields.

- Louron Script Core -

Implemented ComputeShader and ComputeBuffer classes.

Implemented callback functions for ComputeShader and ComputeBuffer integration with C++ code.

--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,4 @@ healthchecksdb
 /Louron Editor/Sandbox Project/Assets/Scripts/Binaries/Louron Script Core.dll
 /Louron Editor/Sandbox Project/Assets/Scripts/Binaries/SandboxProject.deps.json
 /Louron Editor/Sandbox Project/Assets/Scripts/Binaries/SandboxProject.dll
+/Louron Editor/Sandbox Project/Scripts/.vscode/settings.json
