--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Louron Editor Dockspace Window]
 Pos=0,0
-Size=1920,991
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,14 +15,14 @@ Collapsed=0
 
 [Window][Scene]
 Pos=201,19
-Size=1327,698
+Size=1007,544
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=449,65
+ViewportPos=1923,134
 ViewportId=0xE927CF2F
-Size=1180,967
+Size=568,748
 Collapsed=0
 
 [Window][Asset Registry]
@@ -46,8 +46,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=1333,719
-Size=587,272
+Pos=997,565
+Size=603,335
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,15 +59,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=199,698
+Size=199,544
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1530,19
-Size=390,698
+Pos=1210,19
+Size=390,544
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000006,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -90,7 +90,7 @@ IsChild=1
 Size=1027,260
 
 [Window][Example: Assets Browser]
-Pos=60,60
+Pos=70,62
 Size=800,480
 Collapsed=0
 
@@ -109,8 +109,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,719
-Size=1331,272
+Pos=0,565
+Size=995,335
 Collapsed=0
 DockId=0x00000007,1
 
@@ -131,16 +131,16 @@ Size=400,100
 Collapsed=0
 
 [Window][Project Properties]
-Pos=1197,19
-Size=403,881
+Pos=1210,19
+Size=390,668
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000006,1
 
 [Window][Scene Properties]
 Pos=1626,824
 Size=294,185
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x0000000B,1
 
 [Window][Create New Script]
 Pos=650,400
@@ -163,8 +163,9 @@ Size=454,198
 Collapsed=0
 
 [Window][Test]
-Pos=60,60
-Size=44,65
+ViewportPos=921,591
+ViewportId=0x784DD132
+Size=504,276
 Collapsed=0
 
 [Window][Select Entity##SandboxProject.PlayerMoveScript]
@@ -182,8 +183,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,719
-Size=1331,272
+Pos=0,565
+Size=995,335
 Collapsed=0
 DockId=0x00000007,0
 
@@ -201,6 +202,109 @@ Collapsed=0
 ViewportPos=2231,106
 ViewportId=0xFAB62E20
 Size=1046,1063
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=517,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Delete?]
+Pos=703,539
+Size=311,105
+Collapsed=0
+
+[Window][Stacked 1]
+ViewportPos=130,135
+ViewportId=0xE927CF2F
+Pos=79,288
+Size=409,172
+Collapsed=0
+
+[Window][Stacked 2]
+ViewportPos=301,462
+ViewportId=0xD6FA9B61
+Size=226,94
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=58,235
+Size=623,414
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,222
+Size=520,600
+Collapsed=0
+
+[Window][Example: Documents]
+ViewportPos=411,319
+ViewportId=0x1FD64BEB
+Size=607,944
+Collapsed=0
+
+[Window][Eggplant]
+ViewportPos=411,319
+ViewportId=0x1FD64BEB
+Pos=8,96
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Carrot]
+ViewportPos=411,319
+ViewportId=0x1FD64BEB
+Pos=8,96
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,1
+
+[Window][Example: Log]
+Pos=60,222
+Size=839,400
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,222
+Size=339,375
+Collapsed=0
+
+[Window][Example: Simple layout]
+ViewportPos=296,396
+ViewportId=0x32FFF4A6
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,386
+
+[Window][Example: Long text display]
+Pos=2,56
+Size=520,600
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=42,296
+Size=312,79
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=161,79
+Size=516,105
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=42,196
+Size=368,82
+Collapsed=0
+
+[Window][Test Slider]
+Pos=297,201
+Size=792,234
 Collapsed=0
 
 [Table][0xAC9A836A,2]
@@ -221,7 +325,7 @@ Column 2  Width=126
 
 [Table][0xDDC24BCA,2]
 RefScale=13
-Column 0  Sort=0v
+Column 1  Sort=0v
 
 [Table][0x8B7F3509,2]
 Column 0  Weight=1.7295
@@ -349,19 +453,18 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0xBCD3763F Window=0xF829B4E6 Pos=0,48 Size=1920,972 Split=X
-  DockNode            ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=X
-    DockNode          ID=0x00000005 Parent=0x0000000B SizeRef=1195,881 Split=Y
-      DockNode        ID=0x0000000D Parent=0x00000005 SizeRef=1920,607 Split=X
-        DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=199,881 Selected=0x2E9237F7
-        DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=810,881 Split=Y
-          DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-          DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
-            DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=1007,524 CentralNode=1 Selected=0xE192E354
-            DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=390,524 Selected=0xB5796446
-      DockNode        ID=0x0000000E Parent=0x00000005 SizeRef=1920,272 Split=X Selected=0xBF096F38
-        DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1331,340 Selected=0xBF096F38
-        DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=587,340 Selected=0x1E6EB881
-    DockNode          ID=0x00000006 Parent=0x0000000B SizeRef=403,881 Selected=0x2A660BC6
-  DockNode            ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
+DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
+DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=138,180 Size=1600,881 Split=X
+  DockNode          ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=Y
+    DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=1920,544 Split=X
+      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=199,881 Selected=0x2E9237F7
+      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=810,881 Split=Y
+        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
+          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1007,668 CentralNode=1 Selected=0xE192E354
+          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=390,668 Selected=0xB5796446
+    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1920,335 Split=X Selected=0xBF096F38
+      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=995,340 Selected=0xBF096F38
+      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=603,340 Selected=0x1E6EB881
+  DockNode          ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
 
