Custom Shaders, Custom Materials, Custom Uniform Blocks for Materials, Scripting Integration, MSAA, Anisotropic Filtering
- Louron Core -

Deprecated the old ShaderLibrary, and made shaders assets. When the editor loads, it will load custom inbuilt shaders that are static and unchanging. This is handled with a new workflow for getting inbuilt shaders so the renderpipeline can use these during rendering.

Exteneded uniform Set functions in Shader class to include a larger variety of types.

Users can now create custom shaders in their project. There is a new workflow which allows users to create custom variables in what I'm calling a MaterialUniforms block in the shader.

When the shader loads, it will detect the appropriate part of the shader, and will read this in separate from the frag and vert shaders. This block will be inserted into both the vert and frag shaders before compilation. Users can access these custom uniforms through the MaterialUniforms u_MaterialUniforms block. If you declare a 'float myFloat;' in the custom MaterialUniform block, you can access it's members through doing 'u_MaterialUniforms.myFloat'.

This is cool and all now that we have a workflow to pass data into the custom shader, BUT how can we actually do this?

Material's have been updated to hold a new system called 'MaterialUniformBlock'. This is a way of managing these custom uniforms. Each material will have a uniform block with a map of uniforms with the key being the name, and then a GLSLType and UniformValue.

A GLSLType is a new enum which outlines all types we may use in custom shaders.

A UniformValue is a variant of all the internal C++ types for these GLSLtypes.

A MaterialUniformBlock is initialised from the shader, which means that it will create this uniform management system based on what the shader read in when compiling the shader code.

Now we have access to all our custom uniforms through a MaterialUniformBlock. How do we now use this! Well with MaterialUniformBlock::S

--- a/Louron Editor/imgui.ini
+++ b/Louron Editor/imgui.ini
@@ -14,19 +14,18 @@ Size=1384,711
 Collapsed=0
 
 [Window][Scene]
-Pos=201,19
-Size=1007,544
+Pos=264,19
+Size=909,657
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1923,134
-ViewportId=0xE927CF2F
+Pos=662,68
 Size=568,748
 Collapsed=0
 
 [Window][Asset Registry]
-Pos=1285,19
+Pos=1199,-67
 Size=315,881
 Collapsed=0
 DockId=0x0000000C,0
@@ -46,8 +45,8 @@ IsChild=1
 Size=300,944
 
 [Window][Profiler]
-Pos=997,565
-Size=603,335
+Pos=1175,678
+Size=425,222
 Collapsed=0
 DockId=0x00000008,0
 
@@ -59,15 +58,15 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=199,544
+Size=262,657
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties Panel]
-Pos=1210,19
-Size=390,544
+Pos=1175,19
+Size=425,324
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000009,0
 
 [Window][Dear ImGui Demo/##Basket_745C408A]
 IsChild=1
@@ -109,8 +108,8 @@ Size=321,398
 Collapsed=0
 
 [Window][Render]
-Pos=0,565
-Size=995,335
+Pos=0,678
+Size=1173,222
 Collapsed=0
 DockId=0x00000007,1
 
@@ -126,15 +125,15 @@ Size=400,125
 Collapsed=0
 
 [Window][New Scene]
-Pos=-1406,159
+Pos=514,314
 Size=400,100
 Collapsed=0
 
 [Window][Project Properties]
-Pos=1210,19
-Size=390,668
+Pos=3015,19
+Size=425,593
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000009,1
 
 [Window][Scene Properties]
 Pos=1626,824
@@ -153,8 +152,8 @@ Size=300,100
 Collapsed=0
 
 [Window][Script Error]
-Pos=600,425
-Size=400,50
+Pos=3524,715
+Size=480,50
 Collapsed=0
 
 [Window][Select Entity]
@@ -183,8 +182,8 @@ Size=300,125
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,565
-Size=995,335
+Pos=0,678
+Size=1173,222
 Collapsed=0
 DockId=0x00000007,0
 
@@ -306,6 +305,12 @@ Collapsed=0
 Pos=297,201
 Size=792,234
 Collapsed=0
+
+[Window][Material Properties Panel]
+Pos=1175,345
+Size=425,331
+Collapsed=0
+DockId=0x0000000A,0
 
 [Table][0xAC9A836A,2]
 RefScale=13
@@ -453,18 +458,20 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
-DockSpace           ID=0xBCD3763F Window=0xF829B4E6 Pos=138,180 Size=1600,881 Split=X
-  DockNode          ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=Y
-    DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=1920,544 Split=X
-      DockNode      ID=0x00000003 Parent=0x0000000D SizeRef=199,881 Selected=0x2E9237F7
-      DockNode      ID=0x00000004 Parent=0x0000000D SizeRef=810,881 Split=Y
-        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
-        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
-          DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1007,668 CentralNode=1 Selected=0xE192E354
-          DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=390,668 Selected=0xB5796446
-    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1920,335 Split=X Selected=0xBF096F38
-      DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=995,340 Selected=0xBF096F38
-      DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=603,340 Selected=0x1E6EB881
-  DockNode          ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
+DockSpace             ID=0xA086D808 Pos=419,415 Size=591,840 CentralNode=1 Selected=0x15EF3519
+DockSpace             ID=0xBCD3763F Window=0xF829B4E6 Pos=86,128 Size=1600,881 Split=X
+  DockNode            ID=0x0000000B Parent=0xBCD3763F SizeRef=1283,881 Split=Y
+    DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=1920,657 Split=X
+      DockNode        ID=0x00000003 Parent=0x0000000D SizeRef=262,881 Selected=0x2E9237F7
+      DockNode        ID=0x00000004 Parent=0x0000000D SizeRef=1336,881 Split=Y
+        DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1600,50 HiddenTabBar=1 Selected=0x475342E5
+        DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=0,58 Split=X Selected=0xE192E354
+          DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=909,668 CentralNode=1 Selected=0xE192E354
+          DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=425,668 Split=Y Selected=0xB5796446
+            DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=621,324 Selected=0xB5796446
+            DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=621,331 Selected=0x4487EE04
+    DockNode          ID=0x0000000E Parent=0x0000000B SizeRef=1920,222 Split=X Selected=0x81AED595
+      DockNode        ID=0x00000007 Parent=0x0000000E SizeRef=1173,311 Selected=0xBF096F38
+      DockNode        ID=0x00000008 Parent=0x0000000E SizeRef=425,311 Selected=0x1E6EB881
+  DockNode            ID=0x0000000C Parent=0xBCD3763F SizeRef=315,881 Selected=0xD02A5577
 
