--- a/Louron Script Core/Louron Script Core.csproj
+++ b/Louron Script Core/Louron Script Core.csproj
@@ -12,6 +12,7 @@
 
 	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 	  <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	  <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	  
   </PropertyGroup>
 
